# get-out-of-my-house

./: .cproject  .project  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
